# transductions

./: .flake8  .gitignore  .pre-commit-config.yaml  Demo.ipynb  README.md  RPNTask.py  arith.py  arith_eval.py  attention.py  batcher.sh  bob_models.py  decoder.py  early_stopping.py  encoder.py  env.yaml  eval.py  evaluation-j.py  evaluationNEW.py  few-shot.py  main.py  metrics.py  model-2.txt  model-3.txt  models.py  modelsNEW.py  modelsNEWBob.py  modelsj.py  noah_train.py  old_main.py  pyproject.toml  repl.py  requirements.txt  results.py  seq2seq.py  seq2seqNEW.py  seq2seq_5_22.pt  test.py  tpdn.py  tpdr.py  train.py  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  environment.yaml  requirements.txt
conf/: eval.yaml  eval_arith.yaml  few-shot.yaml  repl.yaml  tpdn.yaml  train.yaml
config/: config.yaml  eval.yaml  repl.yaml  train.yaml
core/: early_stopping.py  few_shot_trainer.py  trainer.py
data/: alice-herself-alpha.test  alice-herself-alpha.train  alice-herself-beta.test  alice-herself-beta.train  alice-herself-beta.val  alice-herself-delta.test  alice-herself-delta.train  alice-herself-gamma.test  alice-herself-gamma.train  alice-herself.forms  alice-herself.test  alice-herself.train  alice-herself.val  arithmetic.test  arithmetic.train  arithmetic.val  generator.py  neg_grammar.py  negation.test  negation.train  negation.val  negationsmall.train  q_grammar.py  question.test  question.train  question.val  semantics.test  semantics.train  semantics.val  t-alice-alice.test  t-alice-herself.test  t-alice-object.test  t-alice-subject.test  (+8 more)
(+679 files in other folders)
