[tool.poetry]
name = "transductions"
version = "0.1.0"
description = "A PyTorch framework for packaging NLP experiments using sequence-to-sequence models."
authors = ["Jackson Petty <research@jacksonpetty.org>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.7.1"
torchtext = "0.8.1"
hydra-core = "^1.1.0.dev2"
omegaconf = ">=2.1.0dev13"
tensorboard = "*"
transformers = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
